# go2_ros2_sdk

./: .gitignore  .gitmodules  README.md  foxglove.json  requirements.txt  setup.cfg
go2_robot_sdk/: package.xml  setup.py
go2_robot_sdk/calibration/: front_camera.yaml  front_camera_720.yaml
go2_robot_sdk/config/: conf.rviz  cyclonedds_config.rviz  joystick.yaml  mapper_params_online_async.yaml  multi_robot_conf.rviz  nav2_params.yaml  single_robot_conf.rviz  twist_mux.yaml
go2_robot_sdk/external_lib/: libvoxel.wasm
go2_robot_sdk/external_lib/camera_webrtc_rc/: Cargo.toml
go2_robot_sdk/external_lib/camera_webrtc_rc/src/: main.rs
go2_robot_sdk/go2_robot_sdk/: __init__.py  go2_camera_node.py  go2_driver_node.py  go2_driver_node_refactored.py  go2_webrtc_driver_node.py  lidar_to_point.py  main.py  main_node.py  tts.py  webrtc_driver.py
go2_robot_sdk/go2_robot_sdk/application/: __init__.py
go2_robot_sdk/go2_robot_sdk/domain/: __init__.py
go2_robot_sdk/go2_robot_sdk/infrastructure/: __init__.py
go2_robot_sdk/go2_robot_sdk/presentation/: __init__.py  go2_driver_node.py
go2_robot_sdk/launch/: multiple_robot.launch.py  robot.launch.py  robot_cpp.launch.py  robot_dds.launch.py  robot_on_steroids.launch.py  robot_refactored.launch.py  robot_sim.launch.py  urdf.launch.py  webrtc_web.launch.py
go2_robot_sdk/meshes/: front_d_camera.STL  left_d_camera.STL  lidar_link.STL  right_d_camera.STL
go2_robot_sdk/scripts/: go2_camerainfo.py  go2_constants.py  go2_func.py  go2_lidar_decoder.py  go2_math.py  go2_proc_text.py  lidar_decoder_lz4.py  webrtc_driver.py
go2_robot_sdk/scripts_go2/: go2_camerainfo.py  go2_func.py  go2_lidar_decoder.py  webrtc_driver.py
go2_robot_sdk/urdf/: go2.urdf  go2_on_steroids.urdf  go2_with_realsense.urdf  multi_go2.urdf
go2_robot_sim/: CMakeLists.txt  package.xml
go2_robot_sim/include/FSM/: FSM.h  FSMState.h  State_BalanceTest.h  State_FixedStand.h  State_FreeStand.h  State_Passive.h  State_StepTest.h  State_SwingTest.h  State_Trotting.h  State_move_base.h
go2_robot_sim/include/Gait/: FeetEndCal.h  GaitGenerator.h  WaveGenerator.h
go2_robot_sim/include/common/: LowPassFilter.h  PyPlot.h  enumClass.h  mathTools.h  mathTypes.h  timeMarker.h  unitreeLeg.h  unitreeRobot.h
go2_robot_sim/include/control/: BalanceCtrl.h  ControlFrame.h  CtrlComponents.h  Estimator.h
go2_robot_sim/include/interface/: CmdPanel.h  IOInterface.h  IOROS.h  IOSDK.h  KeyBoard.h  WirelessHandle.h
go2_robot_sim/include/message/: LowlevelCmd.h  LowlevelState.h  unitree_joystick.h
go2_robot_sim/src/: main.cpp
go2_robot_sim/src/FSM/: FSM.cpp  FSMState.cpp  State_BalanceTest.cpp  State_FixedStand.cpp  State_FreeStand.cpp  State_Passive.cpp  State_StepTest.cpp  State_SwingTest.cpp  State_Trotting.cpp  State_move_base.cpp
go2_robot_sim/src/Gait/: FeetEndCal.cpp  GaitGenerator.cpp  WaveGenerator.cpp
go2_robot_sim/src/common/: LowPassFilter.cpp  unitreeLeg.cpp  unitreeRobot.cpp
go2_robot_sim/src/control/: BalanceCtrl.cpp  ControlFrame.cpp  Estimator.cpp
go2_robot_sim/src/interface/: IOROS.cpp  IOSDK.cpp  KeyBoard.cpp  WirelessHandle.cpp
go2_robot_sim/src/quadProgpp/: Array.cc  QuadProg++.cc
lidar_processor/: package.xml  setup.cfg  setup.py
lidar_processor/lidar_processor/: __init__.py  lidar_to_pointcloud_node.py  pointcloud_aggregator_node.py
lidar_processor_cpp/: CMakeLists.txt  README.md  package.xml
lidar_processor_cpp/include/lidar_processor_cpp/: lidar_to_pointcloud_node.hpp  pointcloud_aggregator_node.hpp
lidar_processor_cpp/launch/: lidar_processing_pipeline.launch.py  lidar_to_pointcloud.launch.py  pointcloud_aggregator.launch.py
lidar_processor_cpp/src/: lidar_to_pointcloud_node.cpp  pointcloud_aggregator_node.cpp
ros-foxglove-bridge/: .clang-format  .gitignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile.ros1  Dockerfile.ros2  LICENSE  Makefile  README.md  download_test_data.sh  nodelets.xml  package.xml
ros-foxglove-bridge/.devcontainer/: Dockerfile  colcon_defaults.yaml  devcontainer.json
ros-foxglove-bridge/.github/workflows/: ci.yml
ros-foxglove-bridge/foxglove_bridge_base/src/: base64.cpp  foxglove_bridge.cpp  parameter.cpp  serialization.cpp  server_factory.cpp  version.cpp.in
ros-foxglove-bridge/foxglove_bridge_base/tests/: base64_test.cpp  serialization_test.cpp  version_test.cpp
ros-foxglove-bridge/ros1_foxglove_bridge/launch/: foxglove_bridge.launch
ros-foxglove-bridge/ros1_foxglove_bridge/src/: param_utils.cpp  ros1_foxglove_bridge_node.cpp  ros1_foxglove_bridge_nodelet.cpp  service_utils.cpp
ros-foxglove-bridge/ros1_foxglove_bridge/tests/: smoke.test  smoke_test.cpp
ros-foxglove-bridge/ros2_foxglove_bridge/launch/: foxglove_bridge_launch.xml
ros-foxglove-bridge/ros2_foxglove_bridge/src/: generic_client.cpp  message_definition_cache.cpp  param_utils.cpp  parameter_interface.cpp  ros2_foxglove_bridge.cpp  ros2_foxglove_bridge_node.cpp
ros-foxglove-bridge/ros2_foxglove_bridge/tests/: smoke_test.cpp
speech_processor/: package.xml  setup.cfg  setup.py
speech_processor/speech_processor/: __init__.py  tts_node.py
twist_mux/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  twist_mux_deps.repos
twist_mux/.github/workflows/: humble-binary-build-main.yml  iron-binary-build-main.yml  reusable-industrial-ci-with-cache.yml  rolling-binary-build-main.yml
twist_mux/config/: twist_mux_topics.yaml
twist_mux/include/twist_mux/: params_helpers.hpp  topic_handle.hpp  twist_mux.hpp  twist_mux_diagnostics.hpp  twist_mux_diagnostics_status.hpp  utils.hpp
twist_mux/launch/: twist_mux.launch  twist_mux_launch.py
twist_mux/scripts/: joystick_relay.py
twist_mux/src/: twist_marker.cpp  twist_mux.cpp  twist_mux_diagnostics.cpp  twist_mux_node.cpp
twist_mux/test/: test_joystick_relay.py
unitree_go/: CMakeLists.txt  package.xml
unitree_go/msg/: AudioData.msg  Error.msg  Go2FrontVideoData.msg  IMUState.msg  LowState.msg  MotorCmds.msg  MotorState.msg  MotorStates.msg  PathPoint.msg  Req.msg  SportModeState.msg  UwbState.msg  VoxelHeightMapState.msg  VoxelMapCompressed.msg  WebRtcReq.msg
(+109 files in other folders)
