<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_robot_sdk</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="abizov94@gmail.com">brimo</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>go2_interfaces</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
