<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_robot_sdk</name>
  <version>0.0.0</version>
  <description>ROS2 unofficial sdk for Unitree Go2</description>
  <maintainer email="abizov94@gmail.com">brimo</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>go2_interfaces</depend>
  <!-- unitree_go merged into go2_interfaces -->
  <depend>sensor_msgs</depend>

  <exec_depend>twist_mux</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  
  <exec_depend>slam_toolbox</exec_depend>

  <exec_depend>foxglove_bridge</exec_depend>

  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
