<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_processor_cpp</name>
  <version>1.0.0</version>
  <description>C++ ROS2 package for processing LiDAR data from Go2 robot</description>
  
  <maintainer email="abizov94@gmail.com">brimo</maintainer>
  <license>BSD-3-Clause</license>
  
  <author email="abizov94@gmail.com">brimo</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- PCL dependencies for point cloud processing -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  
  <!-- Threading and system dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>