<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypedef="pep440"?>
<package format="3">
  <name>speech_processor</name>
  <version>1.0.0</version>
  <description>ROS2 package for speech processing including TTS and audio management for Go2 robot</description>
  
  <maintainer email="abizov94@gmail.com">brimo</maintainer>
  <license>BSD-3-Clause</license>
  
  <author email="abizov94@gmail.com">brimo</author>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>go2_interfaces</depend>
  
  <!-- Audio processing -->
  <depend>python3-requests</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
