<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twist_mux</name>
  <version>4.3.0</version>
  <description>
      Twist multiplexer, which multiplex several velocity commands (topics) and
      allows to priorize or disable them (locks).
  </description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <license>Apache License 2.0</license>

  <author email="shlee@gaitech.co.kr">Brighten Lee</author>
  <author email="jeremie.deray@canonical.com">Jeremie Deray</author>
  <author email="efernandez@clearpathrobotics.com">Enrique Fernandez</author>
  <author email="siegfried.gevatter@pal-robotics.com">Siegfried-A. Gevatter Pujals</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_updater</depend>

  <exec_depend>twist_mux_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
