[package]
name = "go2webrtc-rc"
version = "0.1.0"
edition = "2021"
authors = ["Tamas Foldi"]
description = "Unitree Go2 WebRTC video stream mapper"
license = "BSDL-2"
repository = "https://github.com/tfoldi/go2webrtc-rs"


[dependencies]
webrtc = "0.10"
tokio = { version = "1.32.0", features = ["full"] }
env_logger = "0.10"
clap = "3"
hyper = { version = "0.14.27", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1"
chrono = "0.4.28"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
lazy_static = "1"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.13.0"
md5 = "0.7.0"
hex = "0.4.3"
dotenv = "0.15.0"
